<resources>
    <string name="app_name">Sportable</string>
    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Meet with people in your neighborhood to play sports together</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>

    <string name="sign_up_description_text">Enter your full name, email id, login and password, to register with us.</string>
    <string name="name">Full Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="login">Login</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile_title">My Profile</string>

    <string name="my_events">My Events</string>
    <string name="quick_search">Quick Search</string>
    <string name="manual_search">Manual Search</string>
    <string name="sports">Sports</string>
    <string name="create_board_title">Create Board</string>
    <string name="create">CREATE</string>
    <string name="board_name">Board Name</string>
    <string name="sport_name">Sport name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="john">John</string>

    <string name="edit_text_hint_title">Title</string>
    <string name="edit_text_hint_description">Description</string>
    <string name="edit_text_hint_date">Date</string>
    <string name="edit_text_hint_location">Location</string>
    <string name="text_add_image">ADD IMAGE</string>
    <string name="btn_text_save">SAVE</string>
    <string name="sport">Sport</string>
    <string name="minimum_number_of_people">Minimum Number of People</string>
    <string name="maximum_number_of_people">Maximum Number of People</string>
    <string name="location">Location</string>
    <string name="add">Add</string>
    <string name="add_sport">Add Sport</string>
    <string name="create_new_event">Create New Event</string>

    <string name="no_sports">No Sports!!!</string>
    <string name="google_maps_api_key">AIzaSyCgvz3b5SqcZK2N9ILhi6tyD21grJNFflI</string>
    <string name="add_place_select_current_location_text">SELECT CURRENT LOCATION</string>
</resources>