<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_main_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="100"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintBottom_toBottomOf="parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/layoutEvents"
            app:cardCornerRadius="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/white_rectangle_background"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="15dp"
            android:layout_weight="25"


            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="100">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/event"
                    android:layout_weight="60"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/my_events"
                    android:textColor="@color/colorBlack"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_weight="40"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/layoutQuickSearch"
            app:cardCornerRadius="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/white_rectangle_background"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="15dp"
            android:layout_weight="25"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="100">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/quick_search"
                    android:layout_weight="60"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/quick_search"
                    android:textColor="@color/colorBlack"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_weight="40"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/layoutSearchOnMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/white_rectangle_background"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="15dp"
            android:layout_weight="25"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="100">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/map"
                    android:layout_weight="60"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="Search On Map"
                    android:textColor="@color/colorBlack"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_weight="40"/>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/layoutSports"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            android:background="@drawable/white_rectangle_background"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="15dp"
            android:layout_weight="25"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="100">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/sports"
                    android:layout_weight="60"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/sports"
                    android:textColor="@color/colorBlack"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:layout_weight="40"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_create_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/ic_vector_add_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>