<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CreateEventActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_create_event_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_background"
        android:orientation="vertical"
        android:padding="@dimen/create_board_content_padding">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/card_view_layout_content_padding">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_sport_image"
                    android:layout_width="@dimen/board_image_size"
                    android:layout_height="@dimen/board_image_size"
                    android:contentDescription="@string/image_contentDescription"
                    android:src="@drawable/ic_board_place_holder"/>

                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/til_sport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/create_board_til_marginTop">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_select_sport_create_event"
                        android:hint="   Select sport"
                        android:paddingTop= "15dp"
                        android:paddingBottom="15dp"
                        android:gravity="center_vertical"
                        android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                        android:background="@android:drawable/editbox_background"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_minimum"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/minimum_number_of_people"
                            android:inputType="number"
                            android:textSize="@dimen/et_text_size"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <ImageButton
                        android:id="@+id/btn_min_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="5dp"
                        android:background="@color/colorWhite"
                        android:src="@drawable/iconsinfo"
                        android:text="Button"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_maximum"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/maximum_number_of_people"
                            android:inputType="number"
                            android:textSize="@dimen/et_text_size"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <ImageButton
                        android:id="@+id/btn_max_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="5dp"
                        android:background="@color/colorWhite"
                        android:src="@drawable/iconsinfo"
                        android:text="Button"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:layout_marginLeft="1dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/tv_select_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Select Time"
                            android:inputType="text"
                            android:layout_marginStart="3dp"
                            android:textSize="@dimen/et_text_size"
                            android:layout_marginLeft="2dp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                        <ImageButton
                            android:id="@+id/btn_time_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="5dp"
                            android:background="@color/colorWhite"
                            android:src="@drawable/iconsinfo"
                            android:text="Button"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/et_duration"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Duration(minutes):"
                                android:inputType="number"
                                android:textSize="@dimen/et_text_size"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <ImageButton
                            android:id="@+id/btn_duration_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="5dp"
                            android:background="@color/colorWhite"
                            android:src="@drawable/iconsinfo"
                            android:text="Button"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>



                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/location"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:inputType="text"
                            android:textSize="@dimen/et_text_size"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <ImageButton
                        android:id="@+id/btn_location_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="5dp"
                        android:background="@color/colorWhite"
                        android:src="@drawable/iconsinfo"
                        android:text="Button"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>


                </androidx.constraintlayout.widget.ConstraintLayout>


                <TextView
                    android:id="@+id/tv_select_current_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape_image_view_border"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="@dimen/add_place_select_current_location_padding"
                    android:text="@string/add_place_select_current_location_text"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/add_place_select_current_location_textsize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_location" />



                <Button
                    android:id="@+id/btn_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/create_board_btn_marginTop"
                    android:background="@drawable/shape_button_rounded"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="@dimen/btn_paddingTopBottom"
                    android:paddingBottom="@dimen/btn_paddingTopBottom"
                    android:text="@string/create"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/btn_text_size"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>